--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -4,6 +4,6 @@ envlist = py26, py27, py33, py34
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/{{ cookiecutter.repo_name }}
-commands = python setup.py test
+commands = python3 setup.py test
 deps =
     -r{toxinidir}/requirements.txt
