--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -2,8 +2,16 @@
 envlist = py33, py34
 
 [testenv]
+passenv = TRAVIS
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/{{ cookiecutter.repo_name }}
-commands = python3 setup.py test
+commands = 
+    py.test -v tests
+    flake8
 deps =
+    pytest
+    flake8
     -r{toxinidir}/requirements.txt
+
+[flake8]
+exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,docs
