--- a/{{cookiecutter.repo_name}}/MANIFEST.in
+++ b/{{cookiecutter.repo_name}}/MANIFEST.in
@@ -4,9 +4,19 @@ include HISTORY.md
 include LICENSE
 include README.md
 include requirements.txt
+include requirements-dev.txt
 
-recursive-include tests *
-recursive-exclude * __pycache__
-recursive-exclude * *.py[co]
+graft src
+recursive-include docs *.md *.rst conf.py Makefile
 
-recursive-include docs *.md conf.py Makefile
+prune docs/md
+
+global-exclude instance/*
+global-exclude __pycache__/*
+
+global-exclude *.swp
+global-exclude *.py[co]
+global-exclude config.cfg
+global-exclude config.ini
+global-exclude {{ cookiecutter.repo_name }}.cfg
+global-exclude {{ cookiecutter.repo_name }}.ini
