--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -1,11 +1,11 @@
 [tox]
-envlist = py33, py34, py35
+envlist = py35
 
 [testenv]
 passenv = TRAVIS
 setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/{{ cookiecutter.repo_name }}
-commands = 
+    PYTHONPATH = {toxinidir}:{toxinidir}/
+commands =
     py.test -v tests
     flake8
 deps =
