--- a/{{cookiecutter.repo_name}}/.gitignore
+++ b/{{cookiecutter.repo_name}}/.gitignore
@@ -43,5 +43,10 @@ output/*/index.html
 # Sphinx
 docs/_build
 
-g
 docs/md/
+
+# Config files
+config.ini
+config.cfg
+{{ cookicutter.repo_name }}.ini
+{{ cookicutter.repo_name }}.cfg
