Install dev requirements and ignore venv

--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -3,15 +3,12 @@ envlist = py35
 
 [testenv]
 passenv = TRAVIS
-setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/
 commands =
-    py.test -v tests
+    py.test -v tests --showlocals
     flake8
 deps =
-    pytest
-    flake8
     -r{toxinidir}/requirements.txt
+    -r{toxinidir}/requirements-dev.txt
 
 [flake8]
-exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,docs
+exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,docs,venv
