--- a/{{cookiecutter.repo_name}}/.gitignore
+++ b/{{cookiecutter.repo_name}}/.gitignore
@@ -48,6 +48,6 @@ docs/md/
 # Config files
 config.ini
 config.cfg
-{{ cookicutter.repo_name }}.ini
-{{ cookicutter.repo_name }}.cfg
+{{ cookiecutter.repo_name }}.ini
+{{ cookiecutter.repo_name }}.cfg
 .cache/
