--- a/{{cookiecutter.repo_name}}/.env
+++ b/{{cookiecutter.repo_name}}/.env
@@ -1,1 +1,2 @@
-source $(dirname "${BASH_SOURCE[0]}")/venv/bin/activate
+venv_activate="$(dirname "${BASH_SOURCE[0]}")/venv/bin/activate"
+[[ -e  "$venv_activate" ]] && source "$venv_activate"
