--- a/{{cookiecutter.repo_name}}/requirements-dev.txt
+++ b/{{cookiecutter.repo_name}}/requirements-dev.txt
@@ -1,6 +1,9 @@
-recommonmark==0.2.0
-wheel==0.26.0
-twine==1.6.5
+recommonmark==0.4.0
+wheel==0.29.0
+twine==1.8.1
 docutils==0.12
-pypandoc==1.1.3
-pytest==2.9.2
+pypandoc==1.2.0
+pytest==3.0.3
+Sphinx==1.4.8
+sphinx-rtd-theme==0.1.9
+CommonMark==0.5.5
