--- a/{{cookiecutter.repo_name}}/Makefile
+++ b/{{cookiecutter.repo_name}}/Makefile
@@ -1,21 +1,12 @@
 SHELL := /bin/bash
 PYTHON = /usr/bin/env python3
 PWD = $(shell pwd)
+GREP := $(shell command -v ggrep || command -v grep)
 
-.PHONY: clean-pyc clean-build docs clean register release clean-docs
+.PHONY: clean-pyc clean-build docs clean register release clean-docs help
 
 help:
-	@echo "clean - remove all build, test, coverage and Python artifacts"
-	@echo "clean-build - remove build artifacts"
-	@echo "clean-pyc - remove Python file artifacts"
-	@echo "clean-test - remove test and coverage artifacts"
-	@echo "lint - check style with flake8"
-	@echo "test - run tests quickly with the default Python"
-	@echo "test-all - run tests on every Python version with tox"
-	@echo "coverage - check code coverage quickly with the default Python"
-	@echo "docs - generate Sphinx HTML documentation, including API docs"
-	@echo "release - package and upload a release"
-	@echo "dist - package"
+	@$(GREP) --only-matching '^[^[:space:]]*:$$' Makefile | sed 's|:$$||'
 
 clean: clean-build clean-pyc clean-test
 
