--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -18,8 +18,9 @@ deps =
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements-dev.txt
+changedir = docs
 commands =
-    make docs
+    sphinx-build -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
 
 [flake8]
 exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,docs,venv,.tox
