--- a/{{cookiecutter.repo_name}}/requirements-dev.txt
+++ b/{{cookiecutter.repo_name}}/requirements-dev.txt
@@ -6,6 +6,7 @@ pytest==3.0.4
 recommonmark==0.4.0
 sphinx-rtd-theme==0.1.9
 Sphinx==1.4.9
+tox==2.6.0
 twine==1.8.1
 typed-ast==0.6.1
 wheel==0.29.0
