Remove src/ subdirectory

--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -6,7 +6,7 @@ passenv = TRAVIS
 commands =
     py.test -v tests --showlocals
     flake8
-    mypy --fast-parser --silent-imports --disallow-untyped-calls --disallow-untyped-defs src/
+    mypy --fast-parser --silent-imports --disallow-untyped-calls --disallow-untyped-defs {{ cookiecutter.repo_name }}
 deps =
     pytest
     flake8
