--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -1,18 +1,20 @@
 [tox]
-envlist = py35
+envlist = py3{4,5,6},lint,docs
 
 [testenv]
 passenv = TRAVIS
 commands =
     py.test -v tests --showlocals
-    flake8
-    mypy --fast-parser --silent-imports --disallow-untyped-calls --disallow-untyped-defs {{ cookiecutter.repo_name }}
+deps = pytest
+
+[testenv:lint]
+commands =
+    flake8 src/{{ cookiecutter.repo_name }}/ tests/
+    mypy src/{{ cookiecutter.repo_name }}/ tests/
+    # The /bin/bash trick is because pylint only works on modules
+    - /bin/bash -c "pylint src/{{ cookiecutter.repo_name }}/ tests/*.py"
 deps =
-    pytest
-    flake8
-    mypy-lang
-    typed-ast
-    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/requirements-test.txt
 
 [testenv:docs]
 deps =
@@ -23,4 +25,5 @@ commands =
     sphinx-build -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
 
 [flake8]
-exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,docs,venv,.tox
+exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,docs,venv,.tox,.eggs,build
+import-order-style = smarkets
