Add targets for travis and to make github repo

--- a/{{cookiecutter.repo_name}}/Makefile
+++ b/{{cookiecutter.repo_name}}/Makefile
@@ -80,3 +80,8 @@ update-reqs: requirements.txt
 		done; \
 	done;
 
+github:
+	hub create
+
+travis:
+	[ -f .travis.yml ] && travis enable || travis init
