--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -27,3 +27,4 @@ commands =
 [flake8]
 exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,docs,venv,.tox,.eggs,build
 import-order-style = smarkets
+application-import-names = {{ cookiecutter.repo_name }}
