--- a/{{cookiecutter.repo_name}}/mypy.ini
+++ b/{{cookiecutter.repo_name}}/mypy.ini
@@ -1,9 +1,10 @@
 [mypy]
-python_version = 3.6
 check_untyped_defs = true
 disallow_untyped_calls = true
 disallow_untyped_defs = true
 follow_imports = silent
+ignore_missing_imports = true
+python_version = 3.6
 show_column_numbers = true
 warn_incomplete_stub = false
 warn_redundant_casts = true
