--- a/{{cookiecutter.repo_name}}/MANIFEST.in
+++ b/{{cookiecutter.repo_name}}/MANIFEST.in
@@ -1,4 +1,4 @@
-include AUTHORS.md CONTRIBUTING.md HISTORY.md LICENSE README.md requirements*.txt
+include AUTHORS.md CONTRIBUTING.md CHANGELOG.md LICENSE README.md requirements*.txt
 
 graft src
 recursive-include docs *.md *.rst conf.py Makefile
