Install all test dependencies

--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -5,7 +5,7 @@ envlist = py3{4,5,6},lint,docs
 passenv = TRAVIS
 commands =
     py.test -v tests --showlocals
-deps = pytest
+deps = -r{toxinidir}/requirements-test.txt
 
 [testenv:lint]
 commands =
