Use pytest instead of py.test

--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -4,7 +4,7 @@ envlist = py3{4,5,6},lint,docs
 [testenv]
 passenv = TRAVIS
 commands =
-    py.test {posargs:--verbose --showlocals} tests/
+    pytest {posargs:--verbose --showlocals} tests/
 deps = -r{toxinidir}/requirements-test.txt
 
 [testenv:lint]
