--- a/{{cookiecutter.repo_name}}/setup.cfg
+++ b/{{cookiecutter.repo_name}}/setup.cfg
@@ -3,3 +3,8 @@ universal = 0
 
 [metadata]
 license_file = LICENSE
+
+[flake8]
+exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,docs,venv,.tox,.eggs,build
+import-order-style = smarkets
+application-import-names = {{ cookiecutter.repo_name }}
